--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "external/monero-project"]
-	path = external/monero-project
-	url = https://github.com/woodser/monero
+[submodule "external/townforge"]
+	path = external/townforge
+	url = https://git.townforge.net/townforge/townforge.git
