build monero-java on windows using --export-all-symbols
combine build script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -335,6 +335,10 @@ if (BUILD_LIBRARY)
       ${EXTRA_LIBRARIES}
   )
 
+if (WIN32)
+  target_link_options(monero-cpp PUBLIC "-Wl,--enable-auto-import,--export-all-symbols")
+endif()
+
   INSTALL(FILES src/daemon/monero_daemon.h
           src/daemon/monero_daemon_model.h
           DESTINATION include/daemon)
