Revert "Enable private spend key"
This reverts commit 21d337e049aabbb9ba96a3543ba62ca6972f9e58.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,7 +78,6 @@
         "thread": "cpp",
         "typeindex": "cpp",
         "typeinfo": "cpp",
-        "variant": "cpp",
-        "qobject": "cpp"
+        "variant": "cpp"
     }
 }
